# py-gambit

./: README.md  bot.py  chess.ipynb  game.py  gui.py  py_chess.ipynb  py_chess_ipynb.py  pyproject.toml  read_record.py  record.py  requirements.md  start_page.py  timer.py
.ipynb_checkpoints/: game-checkpoint.ipynb  py_chess-checkpoint.ipynb
