[tool.poetry]
name = "chess-project"
version = "0.1.0"
description = ""
authors = ["Reema Eilouti <reema.eilouti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^5.5.5"
jupyter = "^1.0.0"
chess = "^1.5.0"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
